# custos-examinis

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
scripts/: audit_local.py
src/custos_examinis/: config.py  logging.py  main.py
src/custos_examinis/agents/: aggregate.py  code_quality.py  guardrail.py  prompts.py  secrets.py  support.py  vulnerability.py
src/custos_examinis/api/: deps.py  schemas.py
src/custos_examinis/api/routers/: audits.py
src/custos_examinis/auth/: jwt.py
src/custos_examinis/costs/: pricing.py  tracker.py
src/custos_examinis/domain/: errors.py  finding.py  report.py  state.py
src/custos_examinis/graph/: build.py
src/custos_examinis/ingest/: models.py  sandbox.py  sources.py
src/custos_examinis/jobs/: events.py  runner.py  store.py
src/custos_examinis/llm/: providers.py  router.py  tools.py
src/custos_examinis/middleware/: correlation.py  rate_limit.py  timing.py
tests/: conftest.py
tests/fakes/: fake_chat_model.py
tests/fixtures/vulnerable_sample/: app.py
tests/integration/: test_graph_end_to_end.py
tests/integration/api/: conftest.py  test_audits_endpoint.py  test_rate_limit.py
tests/security/: test_prompt_injection_delimiters.py  test_secret_redaction.py  test_zip_slip.py
tests/unit/agents/: test_guardrail.py  test_secrets_regex.py  test_vulnerability.py
tests/unit/auth/: test_jwt.py
tests/unit/domain/: test_finding.py
tests/unit/ingest/: test_sandbox.py
tests/unit/jobs/: test_events.py  test_runner.py  test_store.py
tests/unit/llm/: test_router.py  test_tools.py
