[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "custos-examinis"
version = "0.1.0"
description = "Multi-agent code and security auditor built on a graph of LLM agents across multiple providers"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "structlog>=24.4",
    "httpx>=0.27",
    "redis>=5.1",
    "pyjwt>=2.9",
    "python-multipart>=0.0.12",
    "langgraph>=0.2.60",
    "langchain-core>=0.3.25",
    "langchain-anthropic>=0.3.0",
    "langchain-google-genai>=4.0.0",
    "langchain-ollama>=0.2.1",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "fakeredis>=2.26",
    "types-pyjwt>=1.7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/custos_examinis"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S105", "S106"]
# Deliberately vulnerable fixture used as agent test input, not shipped code.
"tests/fixtures/vulnerable_sample/*" = ["S608", "E722", "S110"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]
exclude = ["^tests/fixtures/"]

[[tool.mypy.overrides]]
module = [
    "langchain_anthropic.*",
    "langchain_google_genai.*",
    "langchain_ollama.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/custos_examinis"]
